2008-04-17  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-secure-memory.c: Test for secure memory before
    remapping memory functions.  Patch from Coleman Kane. Fixes bug #527193
    * plugins/nautilus/seahorse-pgp-preferences.c: Remove unused variable.
    * libseahorse/seahorse-hkp-source.c: Fix importing keys from hkp keyservers.
    Patch from Mackenzie Morgan.  Fixes bug #528150

2008-04-02  Adam Schreiber  <sadam@clemson.edu>

    * daemon/seahorse-service-crypto.c: Return key id of signer even when key
    is not found locally
    * configure.in: Bump version number

=== seahorse 2.23.0 ===

2008-03-10  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * agent/Makefile.am:
    * daemon/Makefile.am:
    * acinclude.m4: Remove code concerning mlock that is no longer used 
    now that secure memory is provided by gnome-keyring.  Fixes bug #520664

=== seahorse 2.22.0 ===

2008-02-24  Stef Walter  <stef@memberwebs.com>

    * configure.in:
    * NEWS:
    * README: Release version 2.22.0

=== seahorse 2.21.92 ===

2008-02-24  Stef Walter  <stef@memberwebs.com>

    * configure.in: 
    * NEWS:
    * README: Release version 2.21.92

2008-02-11  Adam Schreiber  <sadam@clemson.edu>

    * help/C/seahorse.xml: Change menu strings for key generation.
    Fixes bug #503704
    * plugins/applet/docs/C/seahorse-applet.xml: Update applet manual. 
    Patch by Jasper Lievisse Adriaanse.  Fixes bug #507092

2008-02-04  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-gkeyring-item-properties.glade:
    * src/seahorse-pgp-private-key-properties.glade:
    * src/seahorse-pgp-public-key-properties.glade:
    * src/seahorse-ssh-key-properties.glade:  Add comments for translators.
    Fixes bug #514276

2008-01-30  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: Bump version number

=== seahorse 2.21.91 ===

2008-01-30  Adam Schreiber  <sadam@clemson.edu>

    * NEWS
    * README: Release version 2.21.91
