@@ -78,8 +78,10 @@ extern "C" gboolean
 mozilla_is_input (EphyEmbed *embed)
 {
 	nsCOMPtr<nsIWebBrowser> browser;
-	gtk_moz_embed_get_nsIWebBrowser (GTK_MOZ_EMBED (embed),
+	gtk_moz_embed_get_nsIWebBrowser (
+			GTK_MOZ_EMBED (gtk_bin_get_child (GTK_BIN (embed))),
 			getter_AddRefs (browser));
+	NS_ENSURE_TRUE (browser, FALSE);
 	nsCOMPtr<nsIWebBrowserFocus> focus (do_QueryInterface(browser));
 	if (!focus) return FALSE;
 
@@ -100,9 +102,11 @@ extern "C" const char*
 mozilla_get_text (EphyEmbed *embed)
 {
     nsCOMPtr<nsIWebBrowser> browser;
-	gtk_moz_embed_get_nsIWebBrowser (GTK_MOZ_EMBED (embed),
+	gtk_moz_embed_get_nsIWebBrowser (
+			GTK_MOZ_EMBED (gtk_bin_get_child (GTK_BIN (embed))),
 			getter_AddRefs (browser));
 	nsCOMPtr<nsIWebBrowserFocus> focus (do_QueryInterface(browser));
+	NS_ENSURE_TRUE (browser, NULL);
 	if (!focus) 
 	    return NULL;
 
@@ -139,8 +143,10 @@ extern "C" void
 mozilla_set_text (EphyEmbed *embed, char *new_text)
 {
     nsCOMPtr<nsIWebBrowser> browser;
-	gtk_moz_embed_get_nsIWebBrowser (GTK_MOZ_EMBED (embed),
+	gtk_moz_embed_get_nsIWebBrowser (
+			GTK_MOZ_EMBED (gtk_bin_get_child (GTK_BIN (embed))),
 			getter_AddRefs (browser));
+	NS_ENSURE_TRUE (browser, );
 	nsCOMPtr<nsIWebBrowserFocus> focus (do_QueryInterface(browser));
 	if (!focus) return;
 
