@@ -1,5 +1,8 @@
 2008-04-17  Adam Schreiber  <sadam@clemson.edu>
 
+    * plugins/nautilus/seahorse-extension.c:
+    * plugins/epiphany/mozilla/mozilla-helper.cpp: Changes to work with new API.
+    Patch from Ed Catmur.  Fixes bug #523325
     * libseahorse/seahorse-secure-memory.c: Test for secure memory before
     remapping memory functions.  Patch from Coleman Kane. Fixes bug #527193
     * plugins/nautilus/seahorse-pgp-preferences.c: Remove unused variable.
